--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
-  text-align: center;
+  text-align: start;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.addUserBox {
+  width: 200px;
+  height: 100px;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 4px;
+  border-width: 1px;
+  border-color: #282c34;
+  box-shadow: 0px 0px 5px 0px #2c2e31;
+  background-color: aliceblue;
+  overflow: auto;
+  display: grid;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
-
-.App-link {
-  color: #61dafb;
+.user-card {
+  width: 250px;
+  height: 200px;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 4px 0px #2c2e31;
+  background-color: aliceblue;
+  overflow: auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
